--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,11 +6,11 @@ body {
 	.todo-input-container {
 		padding: 6vw;
 
-		background: linear-gradient(135deg, #6253e1, #04befe);
-		background: -webkit-linear-gradient(135deg, #6253e1, #04befe);
-		background: -o-linear-gradient(135deg, #6253e1, #04befe);
-		background: -moz-linear-gradient(135deg, #6253e1, #04befe);
-		background: -ms-linear-gradient(135deg, #6253e1, #04befe);
+		background: linear-gradient(135deg, #3c61f9, #04befe);
+		background: -webkit-linear-gradient(135deg, #3c61f9, #04befe);
+		background: -o-linear-gradient(135deg, #3c61f9, #04befe);
+		background: -moz-linear-gradient(135deg, #3c61f9, #04befe);
+		background: -ms-linear-gradient(135deg, #3c61f9, #04befe);
 		border-bottom: solid thin #dedede;
 
 		text-align: center;
