--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -77,9 +77,20 @@ body {
 				font-size: 1.25rem;
 			}
 
+			.is-editing {
+				width: 96%;
+				height: 2rem;
+				margin-bottom: 0.5rem;
+				padding-left: 3%;
+				font-size: 0.9rem;
+				outline: none;
+				border: solid thin #e6e6e6;
+			}
+
 			.edit,
 			.notes,
-			.delete {
+			.delete,
+			.save {
 				outline: none;
 				border: none;
 				background: transparent;
@@ -95,7 +106,8 @@ body {
 			}
 
 			.edit,
-			.notes {
+			.notes,
+			.save {
 				margin-right: 1rem;
 			}
 
@@ -115,10 +127,10 @@ body {
 					display: flex;
 					justify-content: space-between;
 					flex-direction: row-reverse;
-					font-size: 1rem;
+					font-size: 0.9rem;
 
 					.todo-status-input {
-						margin-right: 0.25rem;
+						margin-right: 0.5rem;
 					}
 				}
 			}
