Updated edit input

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -78,10 +78,11 @@ body {
 			}
 
 			.is-editing {
-				width: 96%;
+				box-sizing: border-box;
+				width: 100%;
 				height: 2rem;
 				margin-bottom: 0.5rem;
-				padding-left: 3%;
+				padding-left: 0.5rem;
 				font-size: 0.9rem;
 				outline: none;
 				border: solid thin #e6e6e6;
